Step up to Java 17