@@ -15,6 +15,16 @@ springBoot {
     buildInfo()
 }
 
+bootRun {
+    args = []
+    jvmArgs = [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
+    ]
+}
+
 bootBuildInfo.mustRunAfter processResources
 
 bootBuildImage {
@@ -29,6 +39,12 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    jvmArgs = [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
+    ]
 }
 
 dockerCompose {
